# Log2Req

./: .gitignore  CMakeLists.txt
src/: CommDef.h  LogParser.cpp  LogParser.h  LogReq.cpp  LogReq.h  LogReqClassifier.cpp  LogReqClassifier.h  main.cpp
src/MTSearch_thrift/: MTSearchApi.thrift  gen_SearchMultiRes.h
src/MTSearch_thrift/gen-cpp/: MTSearch.cpp  MTSearch.h  MTSearch.tcc  MTSearchApi_constants.cpp  MTSearchApi_constants.h  MTSearchApi_types.cpp  MTSearchApi_types.h  MTSearchApi_types.tcc
